--- a/стартап/startup/html/status.html
+++ b/стартап/startup/html/status.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
@@ -25,7 +25,7 @@
         <a href="recording.html" class="nav-link">Записаться</a>
         <a href="status.html" class="nav-link active">Статус очереди</a>
         <a href="profile.html" class="nav-link">Личный кабинет</a>
-        <a href="contacts%20and%20about.html" class="nav-link">О проекте &amp; Контакты</a>
+
       </nav>
     </div>
       <label class="theme-switch"><input type="checkbox" class="theme-checkbox" onchange="toggleTheme()"><span class="theme-slider"></span></label>
