--- a/стартап/startup/html/auth.html
+++ b/стартап/startup/html/auth.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
@@ -161,21 +161,21 @@
 
     /* ===== DARK THEME OVERRIDES ===== */
     [data-theme="dark"] body {
-      background: linear-gradient(135deg, #0a1f10 0%, #0d2b16 100%) !important;
+      background: linear-gradient(135deg, #0d1117 0%, #111827 100%) !important;
     }
     [data-theme="dark"] .auth-card {
-      background: #132910;
+      background: #111827;
       box-shadow: 0 20px 60px rgba(0,0,0,0.6);
-      border: 1px solid rgba(34,197,94,0.15);
+      border: 1px solid rgba(56,189,248,0.15);
     }
     [data-theme="dark"] .tabs {
-      background: #0a1f10;
+      background: #0d1117;
     }
     [data-theme="dark"] .tab {
       color: var(--muted);
     }
     [data-theme="dark"] .tab.active {
-      background: #1a3a28;
+      background: #131f2e;
       color: var(--accent-2);
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
@@ -183,8 +183,8 @@
       color: var(--text-soft);
     }
     [data-theme="dark"] .form-input {
-      background: #0a1f10;
-      border-color: rgba(34,197,94,0.25);
+      background: #0d1117;
+      border-color: rgba(56,189,248,0.20);
       color: var(--text);
     }
     [data-theme="dark"] .form-input:focus {
