--- a/стартап/startup/html/main.html
+++ b/стартап/startup/html/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
@@ -75,7 +75,7 @@
 
     /* ===== DARK THEME OVERRIDES ===== */
     [data-theme="dark"] .filter-btn {
-      border-color: rgba(34,197,94,0.25);
+      border-color: rgba(56,189,248,0.20);
       color: var(--accent-2);
     }
     [data-theme="dark"] .filter-btn:hover {
@@ -105,7 +105,6 @@
         <a href="recording.html" class="nav-link">Записаться</a>
         <a href="status.html" class="nav-link">Статус очереди</a>
         <a href="profile.html" class="nav-link">Личный кабинет</a>
-        <a href="contacts%20and%20about.html" class="nav-link">О проекте &amp; Контакты</a>
       </nav>
     </div>
       <label class="theme-switch"><input type="checkbox" class="theme-checkbox" onchange="toggleTheme()"><span class="theme-slider"></span></label>
@@ -130,6 +129,7 @@
             <a class="btn btn-primary" href="recording.html">Записаться</a>
             <a class="btn btn-outline" href="status.html">Проверить статус</a>
             <a class="btn btn-outline" href="profile.html">Личный кабинет</a>
+            <a class="btn btn-outline" href="contacts%20and%20about.html">О проекте &amp; Контакты</a>
           </div>
         </div>
         <div class="hero-map">
