--- a/стартап/startup/html/profile.html
+++ b/стартап/startup/html/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
@@ -368,12 +368,12 @@
 
     /* ===== DARK THEME OVERRIDES ===== */
     [data-theme="dark"] .stat-card {
-      background: #1a3a28;
-      border-color: rgba(34,197,94,0.15);
+      background: #131f2e;
+      border-color: rgba(56,189,248,0.15);
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
     }
     [data-theme="dark"] .section-card {
-      background: #132910;
+      background: #111827;
       border-color: rgba(34,197,94,0.13);
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
     }
@@ -382,8 +382,8 @@
     }
     [data-theme="dark"] .appointment-item,
     [data-theme="dark"] .appt-item {
-      background: #1a3a28;
-      border-color: rgba(34,197,94,0.15);
+      background: #131f2e;
+      border-color: rgba(56,189,248,0.15);
     }
     [data-theme="dark"] .appt-clinic,
     [data-theme="dark"] .appt-doctor,
@@ -403,8 +403,8 @@
     }
 
     [data-theme="dark"] .user-data-field {
-      background: #1a3a28;
-      border-color: rgba(34,197,94,0.15);
+      background: #131f2e;
+      border-color: rgba(56,189,248,0.15);
     }
     [data-theme="dark"] .user-data-field .udf-label {
       color: var(--muted);
@@ -420,17 +420,17 @@
       color: var(--muted);
     }
     [data-theme="dark"] .tab-btn.active {
-      background: #1a3a28;
+      background: #131f2e;
       color: var(--accent-2);
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
     [data-theme="dark"] .tab-btn:hover:not(.active) {
-      background: rgba(34,197,94,0.08);
+      background: rgba(56,189,248,0.08);
       color: var(--text-soft);
     }
     [data-theme="dark"] .appointment-item {
-      background: #1a3a28;
-      border-color: rgba(34,197,94,0.15);
+      background: #131f2e;
+      border-color: rgba(56,189,248,0.15);
     }
     [data-theme="dark"] .appt-hospital-name {
       color: var(--text);
@@ -439,22 +439,22 @@
       color: var(--accent-2);
     }
     [data-theme="dark"] .hospital-chip {
-      background: rgba(34,197,94,0.08);
-      border-color: rgba(34,197,94,0.15);
+      background: rgba(56,189,248,0.08);
+      border-color: rgba(56,189,248,0.15);
     }
     [data-theme="dark"] .hospital-chip:hover {
-      background: rgba(34,197,94,0.14);
+      background: rgba(56,189,248,0.12);
     }
     [data-theme="dark"] .chip-icon {
-      background: #132910;
+      background: #111827;
       box-shadow: none;
     }
     [data-theme="dark"] .hospital-chip div div:first-child {
       color: var(--text) !important;
     }
     [data-theme="dark"] .quick-book {
-      background: linear-gradient(135deg, #0f2d1e 0%, #132910 100%);
-      border-color: rgba(34,197,94,0.2);
+      background: linear-gradient(135deg, #0d1117 0%, #111827 100%);
+      border-color: rgba(56,189,248,0.15);
     }
     [data-theme="dark"] .section-count {
       background: rgba(34,197,94,0.12);
@@ -473,7 +473,7 @@
         <a href="recording.html" class="nav-link">Записаться</a>
         <a href="status.html" class="nav-link">Статус очереди</a>
         <a href="profile.html" class="nav-link active">Личный кабинет</a>
-        <a href="contacts%20and%20about.html" class="nav-link">О проекте &amp; Контакты</a>
+
       </nav>
     </div>
       <label class="theme-switch"><input type="checkbox" class="theme-checkbox" onchange="toggleTheme()"><span class="theme-slider"></span></label>
@@ -979,9 +979,9 @@
 
   <style>
     [data-theme="dark"] #profileEditorModal > div {
-      background: #132910 !important;
+      background: #111827 !important;
       box-shadow: 0 20px 60px rgba(0,0,0,0.6) !important;
-      border: 1px solid rgba(34,197,94,0.15) !important;
+      border: 1px solid rgba(56,189,248,0.15) !important;
     }
     [data-theme="dark"] #profileEditorModal h3 {
       color: var(--accent-2) !important;
@@ -990,8 +990,8 @@
       color: var(--muted) !important;
     }
     [data-theme="dark"] #profileEditorModal input {
-      background: #0a1f10 !important;
-      border-color: rgba(34,197,94,0.25) !important;
+      background: #0d1117 !important;
+      border-color: rgba(56,189,248,0.20) !important;
       color: var(--text) !important;
     }
   </style>
