--- a/стартап/startup/html/auth.html
+++ b/стартап/startup/html/auth.html
@@ -10,7 +10,7 @@
   <style>
 
     body {
-      background: linear-gradient(135deg, #16a34a 0%, #15803d 100%);
+      background: linear-gradient(135deg, #16a34a 0%, #0891b2 100%);
       min-height: 100vh;
       display: flex;
       align-items: center;
@@ -100,7 +100,7 @@
     .submit-btn {
       width: 100%;
       padding: 14px;
-      background: linear-gradient(135deg, #16a34a, #15803d);
+      background: linear-gradient(135deg,#16a34a,#0891b2);
       color: white;
       border: none;
       border-radius: 10px;
@@ -266,7 +266,7 @@
         <button type="submit" class="submit-btn">Зарегистрироваться</button>
       </form>
         <div style="margin-top:16px;text-align:center;">
-          <button type="button" onclick="openVideoModal()" style="display:inline-flex;align-items:center;gap:8px;background:rgba(22,163,74,0.08);color:#065f46;border:1.5px solid rgba(22,163,74,0.25);border-radius:12px;padding:11px 20px;font-size:14px;font-weight:700;cursor:pointer;transition:all 0.2s ease;width:100%;" onmouseover="this.style.background='rgba(22,163,74,0.15)'" onmouseout="this.style.background='rgba(22,163,74,0.08)'">
+          <button type="button" onclick="openVideoModal()" style="display:inline-flex;align-items:center;gap:8px;background:rgba(22,163,74,0.08);color: #0369a1;border:1.5px solid rgba(22,163,74,0.25);border-radius:12px;padding:11px 20px;font-size:14px;font-weight:700;cursor:pointer;transition:all 0.2s ease;width:100%;" onmouseover="this.style.background='rgba(22,163,74,0.15)'" onmouseout="this.style.background='rgba(22,163,74,0.08)'">
             <span style="font-size:18px;">▶️</span> Смотреть видео о проекте
           </button>
         </div>
