--- a/стартап/startup/html/contacts and about.html
+++ b/стартап/startup/html/contacts and about.html
@@ -18,7 +18,7 @@
     .content-wrap h1 {
       margin: 0 0 10px;
       font-size: clamp(28px, 4vw, 40px);
-      color: #064e3b;
+      color: #0c4a6e;
       letter-spacing: -0.02em;
     }
 
@@ -31,15 +31,15 @@
     .contacts-section {
       margin-top: 24px;
       background: rgba(255, 255, 255, 0.72);
-      border: 1px solid rgba(22, 163, 74, 0.14);
+      border: 1px solid rgba(8,145,178,0.12);
       border-radius: 16px;
       padding: 20px;
-      box-shadow: 0 10px 24px rgba(21, 128, 61, 0.08);
+      box-shadow: 0 10px 24px rgba(15,23,42,0.06);
     }
 
     .contacts-section h2 {
       margin: 0 0 8px;
-      color: #065f46;
+      color: #0369a1;
       font-size: 24px;
     }
 
@@ -65,8 +65,8 @@
       padding: 18px 12px 14px;
       border-radius: 16px;
       background: var(--card);
-      border: 1.5px solid rgba(22, 163, 74, 0.14);
-      box-shadow: 0 4px 16px rgba(21,128,61,0.08);
+      border: 1.5px solid rgba(8,145,178,0.12);
+      box-shadow: 0 4px 16px rgba(15,23,42,0.06);
       transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
       box-sizing: border-box;
       position: relative;
@@ -135,7 +135,7 @@
     .contact-mini-card .mini-name {
       font-weight: 800;
       font-size: 14px;
-      color: #065f46;
+      color: #0369a1;
       margin-bottom: 10px;
       line-height: 1.2;
     }
@@ -165,7 +165,7 @@
 
     .contact-mini-card .mini-links a.link-phone {
       background: rgba(22,163,74,0.08);
-      color: #065f46;
+      color: #0369a1;
       border: 1px solid rgba(22,163,74,0.2);
     }
 
@@ -202,7 +202,7 @@
     }
     .about-fact:hover {
       transform: translateY(-3px);
-      box-shadow: 0 10px 24px rgba(22, 163, 74, 0.14);
+      box-shadow: 0 10px 24px rgba(8,145,178,0.12);
     }
     .about-fact .fact-icon {
       font-size: 34px;
@@ -250,7 +250,7 @@
     .about-value-row .av-title {
       font-weight: 800;
       font-size: 15px;
-      color: #064e3b;
+      color: #0c4a6e;
       margin-bottom: 3px;
     }
     .about-value-row .av-text {
