--- a/стартап/startup/html/main.html
+++ b/стартап/startup/html/main.html
@@ -34,7 +34,7 @@
       display: block;
       margin-top: 10px;
       padding: 8px 0;
-      background: linear-gradient(135deg,#16a34a,#15803d);
+      background: linear-gradient(135deg,#16a34a,#0891b2);
       color: white;
       text-align: center;
       border-radius: 9px;
@@ -222,7 +222,7 @@
       L.marker(coords, { title: h.name }).addTo(map)
         .bindPopup(
           `<div style="min-width:190px;font-family:Inter,sans-serif;">
-            <div style="font-weight:800;font-size:14px;color:#064e3b;margin-bottom:4px;">${icon} ${h.name}</div>
+            <div style="font-weight:800;font-size:14px;color: #0c4a6e;margin-bottom:4px;">${icon} ${h.name}</div>
             <div style="font-size:12px;color:#6b7280;margin-bottom:2px;">${h.type}</div>
             <div style="font-size:12px;color:#6b7280;margin-bottom:6px;">📍 ${h.address || ''}</div>
             <div style="font-size:12px;margin-bottom:8px;">Очередь: <b>${h.queue || 0}</b> чел. · ~${h.waiting} мин</div>
