--- a/стартап/startup/html/main.html
+++ b/стартап/startup/html/main.html
@@ -15,20 +15,34 @@
     .hero-map {
       border-radius: 20px;
       overflow: hidden;
-      height: 400px;
-      min-width: 340px;
+      height: 420px;
+      min-width: 300px;
+      max-width: 100%;
       flex: 1;
-      box-shadow: 0 16px 48px rgba(0,0,0,0.22);
-      border: 3px solid rgba(255,255,255,0.35);
+      box-shadow: 0 8px 32px rgba(15,23,42,0.13), 0 0 0 1px rgba(8,145,178,0.18);
+      border: 2px solid rgba(8,145,178,0.30);
+      background: #e0f2fe;
       position: relative;
     }
     #hospitalsMap {
       width: 100%;
       height: 100%;
+      display: block;
+    }
+    @media (max-width: 768px) {
+      .hero-map { height: 300px; min-width: unset; }
+    }
+    [data-theme="dark"] .hero-map {
+      border-color: rgba(56,189,248,0.25);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.45), 0 0 0 1px rgba(56,189,248,0.15);
     }
     .leaflet-popup-content-wrapper {
       border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.18);
+      box-shadow: 0 8px 28px rgba(15,23,42,0.16);
+      border: 1px solid rgba(8,145,178,0.20);
+    }
+    .leaflet-popup-tip {
+      background: white;
     }
     .map-popup-btn {
       display: block;
