fix: map no longer overlaps header nav (z-index + isolation)

--- a/стартап/startup/html/main.html
+++ b/стартап/startup/html/main.html
@@ -23,6 +23,8 @@
       border: 2px solid rgba(8,145,178,0.30);
       background: #e0f2fe;
       position: relative;
+      isolation: isolate;
+      z-index: 0;
     }
     #hospitalsMap {
       width: 100%;
